--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "react-hot-loader": "^4.13.0",
         "remark": "^13.0.0",
         "remark-highlight.js": "^6.0.0",
-        "remark-html": "^13.0.1"
+        "remark-html": "^13.0.1",
+        "sharp": "^0.29.0"
     },
     "devDependencies": {
         "@types/node": "^16.4.1",
