--- a/package.json
+++ b/package.json
@@ -18,37 +18,36 @@
     },
     "dependencies": {
         "@types/react-dom": "^17.0.9",
-        "@typescript-eslint/eslint-plugin": "^4.31.0",
-        "@typescript-eslint/parser": "^4.31.0",
+        "@typescript-eslint/eslint-plugin": "^4.28.4",
+        "@typescript-eslint/parser": "^4.28.4",
         "classnames": "^2.2.6",
         "cross-env": "^7.0.3",
         "date-fns": "^2.16.1",
-        "date-fns-tz": "^1.1.6",
-        "eslint": "^7.32.0",
+        "date-fns-tz": "^1.0.12",
+        "eslint": "^7.31.0",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.24.2",
-        "eslint-plugin-react": "^7.25.1",
+        "eslint-plugin-import": "^2.23.4",
+        "eslint-plugin-react": "^7.24.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "gray-matter": "^4.0.2",
-        "highlight.js": "^11.2.0",
-        "next": "^11.1.2",
-        "next-sitemap": "^1.6.164",
+        "highlight.js": "^11.1.0",
+        "next": "^11.0.1",
+        "next-sitemap": "^1.6.140",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-hot-loader": "^4.13.0",
-        "remark": "^14.0.1",
-        "remark-highlight.js": "^7.0.1",
-        "remark-html": "^14.0.0",
-        "sharp": "^0.29.1",
-        "use-file-upload": "^1.0.9"
+        "remark": "^13.0.0",
+        "remark-highlight.js": "^6.0.0",
+        "remark-html": "^13.0.1",
+        "sharp": "^0.29.0"
     },
     "devDependencies": {
-        "@types/node": "^16.7.13",
-        "@types/react": "^17.0.20",
+        "@types/node": "^16.4.1",
+        "@types/react": "^17.0.14",
         "cpx": "^1.5.0",
-        "eslint-config-next": "^11.1.2",
+        "eslint-config-next": "^11.0.1",
         "rimraf": "^3.0.2",
-        "ts-node": "^10.2.1",
-        "typescript": "^4.4.2"
+        "ts-node": "^10.1.0",
+        "typescript": "^4.0.5"
     }
 }
