--- a/package.json
+++ b/package.json
@@ -18,36 +18,38 @@
     },
     "dependencies": {
         "@types/react-dom": "^17.0.9",
-        "@typescript-eslint/eslint-plugin": "^4.28.4",
-        "@typescript-eslint/parser": "^4.28.4",
+        "@typescript-eslint/eslint-plugin": "^4.31.2",
+        "@typescript-eslint/parser": "^4.31.2",
         "classnames": "^2.2.6",
         "cross-env": "^7.0.3",
-        "date-fns": "^2.16.1",
-        "date-fns-tz": "^1.0.12",
-        "eslint": "^7.31.0",
+        "date-fns": "^2.24.0",
+        "date-fns-tz": "^1.1.6",
+        "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-plugin-import": "^2.23.4",
-        "eslint-plugin-react": "^7.24.0",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-react": "^7.26.0",
         "eslint-plugin-react-hooks": "^4.2.0",
         "gray-matter": "^4.0.2",
-        "highlight.js": "^11.1.0",
+        "highlight.js": "^11.2.0",
         "next": "^11.1.2",
-        "next-sitemap": "^1.6.140",
+        "next-sitemap": "^1.6.168",
+        "opensea-js": "^1.2.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-hot-loader": "^4.13.0",
         "remark": "^13.0.0",
         "remark-highlight.js": "^6.0.0",
-        "remark-html": "^13.0.1",
-        "sharp": "^0.29.0"
+        "remark-html": "^13.0.2",
+        "sharp": "^0.29.1",
+        "web3": "^1.5.3"
     },
     "devDependencies": {
-        "@types/node": "^16.4.1",
-        "@types/react": "^17.0.14",
+        "@types/node": "^16.9.6",
+        "@types/react": "^17.0.24",
         "cpx": "^1.5.0",
-        "eslint-config-next": "^11.0.1",
+        "eslint-config-next": "^11.1.2",
         "rimraf": "^3.0.2",
-        "ts-node": "^10.1.0",
-        "typescript": "^4.0.5"
+        "ts-node": "^10.2.1",
+        "typescript": "^4.4.3"
     }
 }
