--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
         "export": "next export",
         "deploy": "npm run build && npm run export && npm run postbuild:all",
         "dev": "next dev",
+        "textlint": "npx textlint 'posts/*.md'",
+        "fix:textlint": "npx textlint --fix 'posts/*.md'",
         "fix:eslint": "eslint . --ext .ts,.tsx --fix",
         "fix:prettier": "prettier --write . \"*.{ts, tsx}\"",
-        "fix:all": "npm run fix:eslint && npm run fix:prettier",
-        "ci": "npm run fix:all && npm run deploy"
+        "fix:all": "npm run fix:textlint && npm run fix:eslint && npm run fix:prettier",
+        "ci": "npm run fix:all && npm run textlint && npm run deploy"
     },
     "dependencies": {
         "@types/react-dom": "^17.0.9",
@@ -41,6 +43,9 @@
         "remark-highlight.js": "^6.0.0",
         "remark-html": "^13.0.2",
         "sharp": "^0.29.1",
+        "textlint": "^12.0.2",
+        "textlint-rule-preset-smarthr": "^1.7.1",
+        "textlint-rule-prh": "^5.3.0",
         "web3": "^1.5.3"
     },
     "devDependencies": {
