--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,21 +12,16 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-      - name: use node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-
-      - name: install packages
-        run: npm ci
-
-      - name: deploy
-        run: npm run deploy
+      - name: 'Build' 
+        uses: shalzz/zola-deploy-action@master
+        env:
+          BUILD_DIR: .
+          BUILD_ONLY: true
 
       - name: publish
         uses: netlify/actions/cli@master
         with:
-          args: deploy --dir=out --prod
+          args: deploy --dir=public --prod
         env:
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
