--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,24 @@
-# The URL the site will be built for
 base_url = "https://sushiware.net"
+title = "sushiware.net"
+description = ""
+generate_feed = true
 
-# Whether to automatically compile all Sass files in the sass directory
+default_language = "ja"
+
 compile_sass = true
 
-# Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
+build_search_index = false
+
+taxonomies = [
+	{name = "tags", feed = true},
+]
 
 [markdown]
-# Whether to do syntax highlighting
-# Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
+render_emoji = true
 
 [extra]
-# Put all your custom variables here
+sns = [
+	{service = "twitter", url = "https://twitter.com/sushiware"},
+	{service = "github", url = "https://github.com/sushiware"},
+]
